--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/style.css">
     <title>SevenAnime</title>
 
 </head>
@@ -38,7 +38,7 @@
 
         <div class="btn-home">
             <a href="#" class="btn">Temporada 3</a>
-            <a href="index2.html" class="btn">Temporada 4</a>
+            <a href="capitulos.html" class="btn">Temporada 4</a>
         
         </div>
     </header>
